2011-02-03  Victoria Kirst  <vrk@google.com>

Reviewed by James Robinson.

        [chromium] Fix redundant video frame paint on CSS LayerChromium for <video>
        https://bugs.webkit.org/show_bug.cgi?id=52868

        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::paint):
        (WebKit::WebMediaPlayerClientImpl::paintCurrentFrameInContext):
        (WebKit::WebMediaPlayerClientImpl::acceleratedRenderingInUse):
        * src/WebMediaPlayerClientImpl.h:

Canonical link: https://commits.webkit.org/67671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77599 268f45cc-cd09-0410-ab3c-d52691b4dbfc