Source/WebKit/chromium/src/WebMediaPlayerClientImpl.cpp
@@ -397,6 +397,17 @@ void WebMediaPlayerClientImpl::setSize(const IntSize& size)
 
 void WebMediaPlayerClientImpl::paint(GraphicsContext* context, const IntRect& rect)
 {
+#if USE(ACCELERATED_COMPOSITING)
+    // If we are using GPU to render video, ignore requests to paint frames into
+    // canvas because it will be taken care of by VideoLayerChromium.
+    if (acceleratedRenderingInUse())
+        return;
+#endif
+    paintCurrentFrameInContext(context, rect);
+}
+
+void WebMediaPlayerClientImpl::paintCurrentFrameInContext(GraphicsContext* context, const IntRect& rect)
+{
     // Normally GraphicsContext operations do nothing when painting is disabled.
     // Since we're accessing platformContext() directly we have to manually
     // check.
@@ -443,6 +454,11 @@ MediaPlayer::MovieLoadType WebMediaPlayerClientImpl::movieLoadType() const
 bool WebMediaPlayerClientImpl::supportsAcceleratedRendering() const
 {
     return m_supportsAcceleratedCompositing;
+}
+
+bool WebMediaPlayerClientImpl::acceleratedRenderingInUse()
+{
+    return m_videoLayer.get() && m_videoLayer->layerRenderer();
 }
 
 VideoFrameChromium* WebMediaPlayerClientImpl::getCurrentFrame()
